--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
 ========================= */
 .sidebar {
   width: 220px;
+  min-width: 220px;
+  max-width: 220px;
   background-color: #2c2c2c;
   color: #fff;
   padding: 20px;
@@ -31,6 +33,8 @@ body {
   display: block;
   margin-bottom: 8px;
   font-weight: bold;
+  max-width: 100%;      /* Prevent them from exceeding sidebar width */
+  box-sizing: border-box;
 }
 
 .sidebar select {
@@ -52,6 +56,8 @@ body {
 .monster-filters label {
   font-weight: bold;
   font-size: 0.9rem;
+    white-space: normal;
+  word-break: break-word;
 }
 
 .monster-filters input {
@@ -729,13 +735,15 @@ button {
   border: 2px solid #000;
   border-radius: 6px;
   padding: 20px;
-  max-width: 700px;
+  max-width: 100%;
   margin: auto;
   box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
   font-family: "Garamond", "Georgia", serif;
   color: #000;
   overflow-y: auto;
 }
+
+
 
 /* Table Titles (simulate <h2>) */
 #rules-statblock .table-title {
